// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeBlock renders with a string 1`] = `
<div
  ComponentPath="react-highlight.js"
  prop-className="makeStyles-root-1"
  prop-language="typescript"
>
  var code = 'block';
</div>
`;

exports[`CodeBlock renders with a string and a specified language 1`] = `
<div
  ComponentPath="react-highlight.js"
  prop-className="makeStyles-root-1"
  prop-language="php"
>
  $code = "block";
</div>
`;
